# bitcount

./: meson.build
include/: counter.h  popcount.h
src/: counter.c  main.c  meson.build  popcount.c
